--- a/first/practice/ch04/metertag.html
+++ b/first/practice/ch04/metertag.html
@@ -9,6 +9,9 @@
     <h1>정도를 표현하는 태그</h1>
     <progress id="progressBar" max="100" value="50">50%</progress>
     <button id="prgStartBtn" type="button">시작</button>
+    <br /><br />
+    <h2>meter 태그</h2>
+    <meter value="10" min="0" max="100">20달러</meter>
 
     <script>
       const $progressBar = document.querySelector('#progressBar');
