--- a/first/practice/ch05/navi.html
+++ b/first/practice/ch05/navi.html
@@ -29,3 +29,4 @@
     <a href="http://www.airbnb.com" target="_blank">link</a>
   </body>
 </html>
+div :nth-child(n) 그러니까 이거는 div 안에 있는 자식들중에 n번쨰를 고르는 건데 
