--- a/first/practice/ch19/jsselect.html
+++ b/first/practice/ch19/jsselect.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./jsselect.css" />
   </head>
   <body>
     <h1>장보기 목록</h1>
@@ -23,5 +24,47 @@
         <li>포도</li>
       </ul>
     </section>
+    <section>
+      <h2>고기</h2>
+      <ul>
+        <li class="soldout">소고기</li>
+        <li>돼지고기</li>
+        <li class="soldout">닭고기</li>
+      </ul>
+    </section>
+    <script>
+      const $section = document.querySelector('section');
+      console.log($section);
+
+      const firstSectionChildren = $section.children;
+      console.log('firstSectionChildren:', firstSectionChildren);
+
+      const $parentSection = firstSectionChildren[0].parentElement;
+      console.log('$parentSection:', $parentSection);
+
+      const $sectionList = document.querySelectorAll('section');
+      console.log($sectionList);
+
+      const $section2 = document.querySelector('#sweets');
+      console.log($section2);
+
+      // 모든 li
+      const $all_li = document.querySelectorAll('li');
+      console.log($all_li);
+
+      // plant라는 클래스를 가지고 있는 엘리먼트의 주소값 전부
+      const $all_plant = document.querySelectorAll('.plant');
+      console.log($all_plant);
+
+      // plant클래스 바로 아래에 ul 바로 아래에 soldout클래스를 가진 요소 선택
+      const $all_soldout = document.querySelectorAll('.plant > ul > .soldout');
+      console.log($all_soldout);
+
+      // sweets아이디 안에 있는 ul태그 바로 아래에 두번째 자식 선택
+      const $second = document.querySelector('#sweets ul > :nth-child(2)');
+      const $second2 = document.querySelector('#sweets ul > :nth-of-type(2)');
+      console.log($second);
+      console.log($second2);
+    </script>
   </body>
 </html>
