--- a/first/practice/ch19/jsremove.html
+++ b/first/practice/ch19/jsremove.html
@@ -26,7 +26,7 @@
         <li>포도</li>
       </ul>
     </section>
-    <section>
+    <section id="meat">
       <h2>고기</h2>
       <ul>
         <li class="soldout">소고기</li>
@@ -39,8 +39,24 @@
       $vegetableTitle.remove();
       console.log('$vegetableTitle:', $vegetableTitle);
 
+      const $selfH2Tag = document.createElement('h2');
+      $selfH2Tag.textContent = '내가 만든 h2';
+
       const $secondSection = document.querySelector('#sweets');
       $secondSection.prepend($vegetableTitle);
+      $secondSection.append($selfH2Tag);
+
+      $secondSection.children[0].remove();
+
+      const $meat = document.querySelectorAll('#meat > ul > li');
+      for(i=0; i<$meat.length; i++){
+        $meat[i].remove()
+      };
+      for(const item of $meat){
+        item.remove()
+      };
+      
+
     </script>
   </body>
 </html>
